Revert "Fix issue-icon mobile layout for IssuesList component"
This reverts commit e6a459506378451fc47d09aa7f83f20c66e028fd.

--- a/src/NetworkOptimizer.Web/wwwroot/css/app.css
+++ b/src/NetworkOptimizer.Web/wwwroot/css/app.css
@@ -2385,8 +2385,7 @@ select.form-control {
         padding-top: 0.05rem;
     }
 
-    .issue-body,
-    .issue-content {
+    .issue-body {
         display: contents;
     }
 
